--- a/index.html
+++ b/index.html
@@ -1,13 +1,105 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+</head>
+
+<body>
+  <header class="bg-dark">
+    <div class="container-lg">
+      <nav class="navbar navbar-expand-lg" data-bs-theme="dark">
+        <a class="navbar-brand" href="index.html">
+          <h1>Bootstrap</h1>
+        </a>
+        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu" aria-label="Nav Menu Button"
+          aria-controls="menu" aria-expanded="false" type="button">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!--everything inside the div collaspe with now show/hide with the toggler-->
+        <div class="collapse navbar-collapse justify-content-end" id="menu">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="#">Link One</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Link Two</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Link Three</a></li>
+          </ul>
+          <form action="#">
+            <input class="form-control" type="text" placeholder="Search" aria-label="Search Bar">
+          </form>
+        </div>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section class="py-5">
+      <div class="container-lg">
+        <div class="row">
+          <div class="col-md-8">
+            <h2>Call Out Area</h2>
+            <p>Learning the Bootstrap framework for fast and easy prototyping.</p>
+            <a class="btn btn-outline-secondary mb-3 me-2" href="#">Learn More</a>
+            <button class="btn btn-primary mb-3 me-2">Download</button>
+          </div>
+          <div class="col-md-4">
+            <img class="img-fluid" src="img/bootstrap-wallpaper.webp" alt="Bootstrap Logo">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="py-5">
+      <div class="container-lg">
+
+        <div class="row">
+          <div class="col-lg">
+            <div class="card shadow-sm">
+              <div class="card-header">
+                <h2>Heading</h2>
+              </div>
+              <div class="card-body">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed sequi nemo natus impedit magni id
+                  numquam architecto iusto repellat in pariatur, inventore esse error quidem modi molestiae officiis
+                  sint tempore?</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg">
+            <div class="card shadow-sm">
+              <div class="card-header">
+                <h2>Heading</h2>
+              </div>
+              <div class="card-body">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed sequi nemo natus impedit magni id
+                  numquam architecto iusto repellat in pariatur, inventore esse error quidem modi molestiae officiis
+                  sint tempore?</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg">
+            <div class="card shadow-sm">
+              <div class="card-header">
+                <h2>Heading</h2>
+              </div>
+              <div class="card-body">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed sequi nemo natus impedit magni id
+                  numquam architecto iusto repellat in pariatur, inventore esse error quidem modi molestiae officiis
+                  sint tempore?</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
